--- a/index.html
+++ b/index.html
@@ -7,22 +7,64 @@
     <title>FlightPool|Главная страница</title>
     <link rel="stylesheet" href="styles/pages/settings.css">
     <link rel="stylesheet" href="styles/pages/index.css">
-</head>
+    <link rel="stylesheet" href="styles/modules/font-awesome-4.7.0/css/font-awesome.min.css">
 
-<body>
+</head>
+<body class="light">
     <header>
         <div class="container">
             <a href="#" class="logo">
-                FlightPool
+                <i class="fa fa-plane fa-3x" aria-hidden="true"></i>
             </a>
             <ul class="menu">
                 <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
                 <li><a href="#">Link</a></li>
             </ul>
-            <button>Личный кабинет</button>
+            <button><i class="fa fa-address-book-o fa-3x" aria-hidden="true"></i>
+            </button>
+            <button class="theme"><i class="fa fa-moon-o fa-3x" aria-hidden="true"></i>
+            </button>
         </div>
     </header>
+    <main>
+        <section class="hero">
+            <div class="container">
+                <h1 class="hero_lead">Flightpool</h1>
+                <p class="hero_desc">
+                    мы сближаем города вы живете там где хотите
+                </p>
+            </div>
+        </section>
+        <section class="how-work">
+            <div class="container">
+                <h2 class="how-work_title">Как работает наш сервис?</h2>
+                <ul>
+                    <li>
+                        <h3 class="how-work_subtitle">ВЫбираете удобное время для перелета</h3>
+                        <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <h3 class="how-work_subtitle1">накапливаете болльше 50%</h3>
+                        <i class="fa fa-external-link-square fa-3x" aria-hidden="true"></i>
+
+                    </li>
+                </ul>
+            
+                <ul>
+                    <li>
+                        <h3 class="how-work_subtitle2">Получаете снижение стоимости</h3>
+                        <i class="fa fa-chevron-down fa-3x" aria-hidden="true"></i>
+
+                    </li>
+                </ul>
+            </div>
+        </section>
+    </main>
+<script src="script/index.js"></script>
 </body>
 
 </html>
