--- a/flightpool-frontend-main/index.html
+++ b/flightpool-frontend-main/index.html
@@ -63,6 +63,42 @@
                 </ul>
             </div>
         </section>
+        <section class="trust">
+            <div class="trust_item">
+                <div class="conatiner">
+                    <h2 class="trust_title">
+                        Вы можете нам доверять!
+                        И вот почему
+                    </h2>
+                </div>
+            </div>
+            <div class="trust_item">
+                <div class="container">
+                <ul class="trust_list">
+                    <li class="trust_card">
+                        <img src="img/ппп.jpg" alt="">
+                        <h3><center>Возврат средств</center></h3>
+                        <p>
+                            если вы не довольны качеством обслуживания мы всегда готовы вернуть средства
+                        </p>
+                    </li>                    <li class="trust_card">
+                        <img src="img/ппп.jpg" alt="">
+                        <h3><center>Удобность</center></h3>
+                        <p>
+                            выбирайте время полета куда угодно и где угодно
+                        </p>
+                    </li>                    <li class="trust_card">
+                        <img src="img/ппп.jpg" alt="">
+                        <h3><center>Скорость</center></h3>
+                        <p>
+                            мы обещаем что полет найдется быстрои и без каких либо проблем 
+                        </p>
+                    </li>
+                </ul>
+                </div>
+            </div>
+
+        </section>
     </main>
 <script src="script/index.js"></script>
 </body>
